--- a/style.css
+++ b/style.css
@@ -905,7 +905,7 @@ padding-bottom: 0px;
 .contact{
     position: absolute;
     z-index: 5;
-    top: 20%;
+    top: 15%;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
@@ -937,6 +937,7 @@ padding-bottom: 0px;
     margin-top: 200px;
 }
 .form{
+    color: #fff;
     display: block;
     width: 660px;
     right: 0;
@@ -949,10 +950,11 @@ form {
     list-style: none;
     display: flex;
     flex-direction: column;
-    gap: 17px;
+    gap: 5px;
     background-color: transparent;
 }
 #form input, textarea{
+    color: #fff;
     width: 100%;
     list-style: none;
     border: 4px solid #fff;
@@ -999,7 +1001,7 @@ form {
         width: 100%;
         max-width: 2990px;
         margin: auto;
-        margin-top: 10px;
+        margin-top: 0px;
     }
     .contactcontainer img{
         z-index: 1;
@@ -1024,19 +1026,19 @@ form {
         justify-content: center;
         align-items: center;
         text-align: center;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
     }
     .contacttitle h2{
         color: var(--6th-high, #FFF);
         font-family: 'Urbanist', sans-serif;
-        font-size: 20px;
+        font-size: 14px;
         font-style: normal;
         font-weight: 700;
         line-height: 100%;     
-        padding-bottom: 10px;
+        padding-bottom: 5px;
     }
     .contacttitle svg{
-        max-width: 100px;
+        max-width: 80px;
     }
     .contactinfo{
         margin: auto
@@ -1051,19 +1053,20 @@ form {
         display: block;
         width: 260px;
         margin-right: auto;
+        margin-left: 35px;
         height: 200px;
         background-color: transparent;
     }
     form {
-        width:200px;
+        width:220px;
         list-style: none;
         display: flex;
         flex-direction: column;
-        gap: 7px;
         background-color: transparent;
     }
     #form input, textarea{
         width: 100%;
+        font-size: 10px;
         list-style: none;
         border: 4px solid #fff;
         border-radius: 16px;
@@ -1071,39 +1074,22 @@ form {
         background-color: #001e4718;
     }
     #form textarea{
-        height: 100px;
+        height:70px;
     }
     #form input{
         height:  36px;    
     }
     #form button{
         left: 50%;
-        transform: translateX(90%);
-        margin-top: 5px;
-        width: 129px;
-        border-radius: 5px;
-        list-style: none;
-        border: 2px solid #fff;
-        color: #002A68;
-        border-radius: 72px;
-        padding: 8px;
-        background-color: #FFBE50;
-        cursor: pointer;
-        align-items: center;
-        font-family: 'Outfit', sans-serif;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 100%; 
-    }
-    #form button:hover{
-        background-color: #dba444;
-        border: 2px solid #FFBE50;
-        transition: 0.6s;
+        transform: translateX(40%);
+        margin-top: 2px;
+        width: 119px;
+        font-size: 10px;
+        font-weight: 500;
     }
     .formgroup1, .formgroup2{
         display: flex;
-        gap: 7px;
+        gap: 5px;
     }
 }
 
@@ -1205,7 +1191,10 @@ footer{
     font-size: 14.4px;
     font-weight: 500;
     line-height: 150%;
-}/*
+}
+.footerimglogo2{
+    display: none;
+}
 @media screen and (max-width: 770px) {
     footer{
         position: relative;
@@ -1248,18 +1237,21 @@ footer{
         height: 203px;
         text-align: center;
     }
-    .footerimglogo img{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: -25px;
-        width: 100%;
-        max-width: 218.45px;
-        max-height: 188px;
+    .footerimglogo {
+        display: none;
     }
     .adress p{
         font-size: 14px;
         margin-top: 5px;
+        
+    }
+    .footerimglogo2{
+        display: flex;
+        margin-left: 30;
+    }
+    .footerimglogo2 img{
+        margin-top: -25px;
+        width: 155px;
     }
     .footersocials{
         margin-left: 15px;
