--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
     right: 0;
     width: 2900px;
     background-color:#001D47;
-    z-index: 5;
+    z-index: 99;
     box-sizing: border-box;
 }
 .navbar{
@@ -123,8 +123,6 @@ header {
     line-height: 110%;
     align-items: center;
 }
-
-
 .btn-toggle {
     position:absolute;
     right:3rem;
@@ -197,17 +195,115 @@ header {
     align-items: end;
     }   
 }
-
 .postercontainer{
+    position: relative;
     width: 100%;
     max-width: 2990px;
     margin: auto;
+    background-image: url(./assets/Vector19.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
-.postercontainer img{
+.bgposter{
+    display: block;
+    width: 100%;
+    object-fit: cover;
+}
+.infostexts{
+    display: inline;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1290px;
+    margin: auto;
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
+}
+.posterimglogo{
+    display: block;
+    position: absolute;
+    width: 100%;
+    max-width: 389px;
+    margin: auto;
+    top: 30%;
+    left: 20%;
+}
+.postercontainer h3{
+    position: absolute;
+    display: block;
+    width: 643px;
+    color: var(--6th-high, #FFF);
+    font-family: 'Urbanist', sans-serif;
+    font-size: 70.625px;
+    font-weight: 400;
+    top: 30%;
+    left: 50%;
+}
+.postercontainer h3 span{
+    text-underline-offset: 15px;
+}
+.postercontainer p{
+    position: absolute;
+    display: block;
+    top: 62%;
+    left: 66%;
+    width: 321px;
+    border-top: 2px solid #FFBE50;
+    padding-top: 25px;
+    color: var(--6th-high, #FFF);
+    font-family: 'Outfit', sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 130%;
+}
+@media screen and (max-width:900px) {
+    .bgposter{
+        height: 80%;
+    }
+    .infostexts{
+        flex-direction: row;
+        max-width: 390px;
+    }
+    .posterimglogo{
+        max-width: 129px;
+        margin: auto;
+        top: 10%;
+        left: 40%;
+    }
+    .postercontainer h3{
+        width: 303px;
+        font-size: 30.625px;
+        top: 35%;
+        left: 30%;
+    }
+    .postercontainer h3 span{
+        text-underline-offset: 5px;
+    }
+    .postercontainer p{
+        top: 52%;
+        left: 30%;
+        width: 221px;
+        padding-top: 15px;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 130%;
+    }
+}
+.vetor1{
+    position: absolute;
+    display: block;
     width: 100%;
     max-width: 2990px;
     margin: auto;
     object-fit: cover;
+    z-index: 5;
+    bottom: -2;
+}
+.vetor1 img{
+    display: block;
+    width: 100%;
+    max-width: 1990px;
+    margin: auto;
 }
 .missioncontainer{
     position: relative;
