--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ header {
     font-weight: 500;
     line-height: 130%;
 }
-@media screen and (max-width:900px) {
+@media screen and (max-width:700px) {
     .bgposter{
         height: 80%;
     }
@@ -268,20 +268,20 @@ header {
         max-width: 129px;
         margin: auto;
         top: 10%;
-        left: 40%;
+        left: 35%;
     }
     .postercontainer h3{
         width: 303px;
         font-size: 30.625px;
         top: 35%;
-        left: 30%;
+        left: 17%;
     }
     .postercontainer h3 span{
         text-underline-offset: 5px;
     }
     .postercontainer p{
-        top: 52%;
-        left: 30%;
+        top: 57%;
+        left: 17%;
         width: 221px;
         padding-top: 15px;
         font-size: 14px;
@@ -1090,7 +1090,10 @@ form {
     display: flex;
     gap: 24px;
 }
-@media screen and (max-width: 770px) {
+.contactbgimg-m{
+    display: none;
+}
+@media screen and (max-width: 900px) {
     .contactcontainer{
         position: relative;
         display: flex;
@@ -1099,11 +1102,11 @@ form {
         margin: auto;
         margin-top: 0px;
     }
-    .contactcontainer img{
-        z-index: 1;
-        width: 100%;
-        max-width: 2990px;
-        margin: auto;
+    .contactbgimg{
+        display: none;
+    }
+    .contactbgimg-m{
+        display: block;
     }
     .contact{
         position: absolute;
@@ -1113,8 +1116,8 @@ form {
         max-width: 1200px;
         margin: auto;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        flex-direction: column;
+        justify-content: center;
     }
     .contacttitle {
         display: flex;
@@ -1140,25 +1143,33 @@ form {
         margin: auto
     }
     .contactinfo img{
-        display: block;
-        width: 100px;
-        margin-top: 20px;
-        margin-left: 10px;
+        position: relative;
+        width: 180px;
+        top: -50;
+        margin-top: 0px;
+        margin-left: 0px;
+        margin-bottom: 50px;
     }
     .form{
-        display: block;
-        width: 260px;
+        position: relative;
+        top: -50;
+        width: 350px;
         margin-right: auto;
-        margin-left: 35px;
-        height: 200px;
+        margin-left: auto;
         background-color: transparent;
     }
     form {
-        width:220px;
+        padding-top: 20;
+        width: 100%;
+        max-width: 350px;
         list-style: none;
         display: flex;
+        margin: auto;
+        margin-right: auto;
+        margin-left: auto;
         flex-direction: column;
         background-color: transparent;
+        justify-content: center;
     }
     #form input, textarea{
         width: 100%;
@@ -1166,26 +1177,26 @@ form {
         list-style: none;
         border: 4px solid #fff;
         border-radius: 16px;
-        padding: 8px;
+        padding: 12px;
         background-color: #001e4718;
     }
     #form textarea{
-        height:70px;
+        height:110px;
     }
     #form input{
         height:  36px;    
     }
     #form button{
         left: 50%;
-        transform: translateX(40%);
-        margin-top: 2px;
+        transform: translateX(50%);
+        margin-top: 8px;
         width: 119px;
         font-size: 10px;
         font-weight: 500;
     }
     .formgroup1, .formgroup2{
         display: flex;
-        gap: 5px;
+        gap: 10px;
     }
 }
 
