--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header {
     width: 53vw;
     margin: auto;
     right: 0;
-    margin-right: 100;
+    margin-right: 100px;
     align-items: center;  
     background-color:#001D47;  
 }
@@ -71,20 +71,21 @@ header {
     display: flex;
     margin: 0 auto;
     justify-content:space-between;
-    width:300px;
+    width:400px;
     text-align: center;
+    margin-left: -30px;
 }
 .menu-linksbtn a {
     display:block;
     text-align: center;
     color:#fff;
     text-decoration:none;
-    font-family: 'Neue Haas Grotesk Display Pro';
-    font-size: 20px;
+    font-family: 'Urbanist', sans-serif;
+    font-size: 24px;
     font-style: normal;
-    font-weight: 500;
-    line-height: 110%;
-    letter-spacing:-1.2px
+    font-weight: 600;
+    line-height: 130%;
+    letter-spacing:1px
 }
 .menu-linksbtn a:hover{
     color: #FFBE50;
@@ -278,26 +279,28 @@ header {
         max-width: 390px;
     }
     .posterimglogo{
-        max-width: 129px;
+        max-width: 250px;
         margin: auto;
         top: 10%;
-        left: 35%;
+        left: 20%;
+        justify-content: center;
+        align-items: center;
     }
     .postercontainer h3{
-        width: 303px;
-        font-size: 30.625px;
-        top: 35%;
-        left: 17%;
+        width: 353px;
+        font-size: 38.625px;
+        top: 45%;
+        left: 13%;
     }
     .postercontainer h3 span{
         text-underline-offset: 5px;
     }
     .postercontainer p{
-        top: 57%;
-        left: 17%;
+        top:69%;
+        left: 13%;
         width: 221px;
         padding-top: 15px;
-        font-size: 14px;
+        font-size: 20px;
         font-weight: 400;
         line-height: 130%;
     }
