--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @font-face {
     font-family: 'Neue Haas Grotesk Display Pro';
-    src: url('NEUEHAASDISPLAYBLACK.TTF') format('truetype');
+    src: 
+    local('Neue')
+    url('NEUEHAASDISPLAYBLACK.TTF') format('truetype');
     src: url('NHAASGROTESKTXPRO65MD.eot?#iefix') format('embedded-opentype'); 
     src:url('NHAASGROTESKTXPRO65MD.eot'),
          url('NHAASGROTESKTXPRO65MD.woff') format('woff'),
