--- a/style.css
+++ b/style.css
@@ -1232,7 +1232,7 @@ footer{
     margin: auto;
     height: 100px;
     background-color: #FFF;
-    font-family: 'Neue Haas Grotesk Display Pro';
+    font-family: 'Urbanist', sans-serif;
 }
 .footergrid{
     display: flex;
@@ -1252,7 +1252,7 @@ footer{
 .footermenu1 ul li a, .footermenu2 ul li a{
     text-decoration: none;
     color: var(--6th-blue-primary, #002A68);
-    font-family: 'Neue Haas Grotesk Display Pro';
+    font-family: 'Urbanist', sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
@@ -1294,7 +1294,7 @@ footer{
     text-align: center;
     width: auto;
     color: var(--6th-blue-primary, #002A68);
-    font-family: 'Neue Haas Grotesk Display Pro';
+    font-family: 'Urbanist', sans-serif;
     font-size: 16px;
     font-weight: 600;
     line-height: 120%; /* 25.6px */
@@ -1307,7 +1307,7 @@ footer{
     text-align: right;
     margin-right: 30px;
     color: var(--6th-blue-primary, #002A68);
-    font-family: 'Neue Haas Grotesk Display Pro';
+    font-family: 'Urbanist', sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
@@ -1338,7 +1338,7 @@ footer{
 }
 .rights p{
     color: #002A68;
-    font-family: 'Neue Haas Grotesk Display Pro';
+    font-family: 'Urbanist', sans-serif;
     font-size: 14.4px;
     font-weight: 500;
     line-height: 150%;
@@ -1370,7 +1370,7 @@ footer{
     .footermenu2 ul li a, .footermenu1 ul li a{
         text-decoration: none;
         color: var(--6th-blue-primary, #002A68);
-        font-family: 'Neue Haas Grotesk Display Pro';
+        font-family: 'Urbanist', sans-serif;
         font-size: 16px;
         font-style: normal;
         font-weight: 600;
@@ -1426,7 +1426,7 @@ footer{
         text-align: center;
         margin: 0;
         color: var(--6th-blue-primary, #002A68);
-        font-family: 'Neue Haas Grotesk Display Pro';
+        font-family: 'Urbanist', sans-serif;
         font-size: 16px;
         font-style: normal;
         font-weight: 600;
