--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ header {
 .imglogo-m{
     display: none;
 }
-@media only screen and (max-width: 868px) {
+@media only screen and (max-width: 1100px) {
     .btn-toggle {
     display:flex;
     margin-top: 35px;
@@ -165,11 +165,11 @@ header {
         position: absolute;
         display: block;
         z-index: 999;
-        left: 3rem;
+        left: 2rem;
     }
     .imglogo-m img{
         width: 100%;
-        max-width: 100;
+        max-width: 100px;
         margin: auto;
         padding: 10px;
     }
@@ -297,7 +297,41 @@ header {
     font-weight: 500;
     line-height: 130%;
 }
-@media screen and (max-width:990px) {
+@media screen and (max-width:1190px) {
+    .bgposter{
+        height: 80%;
+    }
+    .infostexts{
+        flex-direction: row;
+        max-width: 590px;
+    }
+    .posterimglogo{
+        max-width: 280px;
+        margin: auto;
+        top: 25%;
+        left: 18%;
+    }
+    .postercontainer h3{
+        top: 25%;
+        left: 48%;
+        width: 473px;
+        font-size: 52.625px;
+    }
+    .postercontainer h3 span{
+        text-underline-offset: 10px;
+    }
+    .postercontainer p{
+        width: 300px;
+        padding-top: 20px;
+        font-size: 22px;
+        font-weight: 400;
+        top: 58%;
+        left: 48%;
+        width: 321px;
+
+    }
+}
+@media screen and (max-width:700px) {
     .bgposter{
         height: 80%;
     }
@@ -314,7 +348,7 @@ header {
         align-items: center;
     }
     .postercontainer h3{
-        width: 353px;
+        width: 303px;
         font-size: 32.625px;
         top: 42%;
         left: 13%;
@@ -466,6 +500,46 @@ padding-bottom: 0px;
 }
 }
 
+
+.missiongrid > .missioncard {
+  /* (oldVal - oldMin) * newRange / oldRange + newMin */
+  --value: min(var(--scroll), 30) * 50 / 30;
+  width: calc(50vw + 1vw * var(--value));
+  transform: translateY(calc(50% - 1% * var(--value)));
+}
+
+@media (width <= 1000px) {
+  .missiongrid .missioncard {
+    display: none;
+  }
+
+  .top-section .left {
+    text-align: center;
+  }
+
+  body {
+    font-size: 24px;
+  }
+
+  h1 {
+    font-size: 72px;
+  }
+
+  .imgs > .top-section-img {
+    width: 100vw;
+  }
+}
+
+:root {
+  --scroll: 0;
+}
+
+.missiongrid {
+  position: sticky;
+  top: 0;
+}
+
+
 .request{
     position: relative;
     display: flex;
@@ -593,7 +667,7 @@ padding-bottom: 0px;
 #servicecard3 h2{
     width: 199px;
 }
-@media screen and (max-width: 770px) {
+@media screen and (max-width:970px) {
 .servicestitle {
     display: flex;
     flex-direction: column;
@@ -794,9 +868,7 @@ padding-bottom: 0px;
     font-weight: 400;
     line-height: 130%; /* 18.2px */
 }
-@media screen and (max-width: 770px) {
-}
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 970px) {
 .testemonies {
     display: flex;
     flex-direction: column;
@@ -1020,7 +1092,7 @@ padding-bottom: 0px;
 @media screen and (max-width: 770px) {
     .license{
         left: 50%;
-        transform: translateX(-60%);
+        transform: translateX(-50%);
         height: 80px;
     }
     .license img{
@@ -1136,7 +1208,7 @@ form {
 .contactbgimg-m{
     display: none;
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 970px) {
     .contactcontainer{
         position: relative;
         display: flex;
@@ -1425,7 +1497,7 @@ footer{
         margin-top: 0px;
         width: 100%;
         height: 100%;
-        width: 288px;
+        width: 240px;
     }
     .footersocials{
         margin-left: 0px;
@@ -1467,7 +1539,7 @@ footer{
         padding: 30px 0;
     }
     .rights p{
-        font-size: 12.4px;
+        font-size: 11px;
     }
 }
 
