body font add .

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ font-family: 'Urbanist', sans-serif;
 }
 
 body{
-    /*font-family: 'Urbanist', sans-serif;*/
+    font-family: 'Urbanist', sans-serif;
 }
 html{
     scroll-behavior: smooth;
